test_suite5/ALAN/test_suite/alan-2022-examples/passing/000271_pair.alan
source m8 begin if 74 then relax elsif false then relax end end
